--- a/functions/public/index.html
+++ b/functions/public/index.html
@@ -6,40 +6,11 @@
     <title>David Marom Node-01 server</title>
     <meta name="description" content="David Marom Node-01 server">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body{
-            background-color: #333;
-            color: #eee;
-            font-family: sans-serif;
-        }
-        .green{
-            color: rgb(0, 196, 0);
-        }
-        a{
-            color: rgb(0, 196, 0);
-        }
-    </style>
-
+    <script>
+        window.location.replace("https://documenter.getpostman.com/view/10340861/2s83zcSn1h");
+    </script>
 </head>
-
 <body>
-
-    <h1>David Marom Node-01 server</h1>
-    <h3>Base URL: </h3><span><pre>https://us-central1-node-01-f88ab.cloudfunctions.net/app</pre></span>
-    <hr />
-    <p><b>Routes:</b></p>
-    <p>Get book list</p>
-    <p class="green">GET</p>
-    <p>route: /api/book</p>
-    <p>Content-Type: application/json</p>
-    <p>Params: -</p>
-    <p>Body: -</p>
-
-    <hr />
-    <p>* This is work is in progress</p>
-    <p>Git: </p>
-    <a href="https://github.com/DavidMarom/node-01" target="_blank">https://github.com/DavidMarom/node-01</a>
-
     <script src="" async defer></script>
 </body>
 
